2002-12-02  Ville Palo <vi64pa@koti.soon.fi>

	* System.Xml/XmlDataDocument.cs : some fixes and some imlemented 
	methods.
	
2002-12-01  Tim Coleman <tim@timcoleman.com>
	* System.Data.SqlClient/SqlDataReader.cs:
		Change to reflect TdsSchemaInfo -> TdsDataColumnCollection
		shift.

2002-12-01  Ville Palo <vi64pa@koti.soon.fi>

	* list: Added XmlDataDocument.cs
	* System.Xml/XmlDataDocument.cs: more implementation.
	
2002-11-30  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.Odbc/OdbcDataReader.cs: implemented GetValues() method
	needed by OdbcDataAdapter
	
	* System.Data.Odbc/OdbcDataAdapter.cs
	* System.Data.Odbc/OdbcRowUpdatedEventArgs.cs
	* System.Data.Odbc/OdbcRowUpdatedEventHandler.cs
	* System.Data.Odbc/OdbcRowUpdatingEventArgs.cs
	* System.Data.Odbc/OdbcRowUpdatingEventHandler.cs: added files for an
	ODBC Data Adapter

	* list: added new files to linux build 
	in namespace System.Data.Odbc for the ODBC Data Adapter
	
	* System.Xml/XmlDataDocument.cs: commented method
	protected internal override XPathNavigator CreateNavigator(XmlNode node)
	because it would not compile on .NET Framework.  Added 
	a FIXME comment there

2002-11-29  Ville Palo <vi64pa@koti.soon.fi>

	* System.Xml/XmlDataDocument.cs: Started to implement.
	
2002-11-26  Tim Coleman <tim@timcoleman.com>
	* System.Data.SqlClient/SqlCommand.cs:
	* System.Data.SqlClient/SqlConnection.cs:
	* System.Data.SqlClient/SqlDataReader.cs:
	* System.Data.SqlClient/SqlParameter.cs:
	* System.Data.SqlClient/SqlParameterCollection.cs:
	* System.Data.SqlClient/SqlTransaction.cs:
		Many changes around restructuring of parameter
		information so that the Sybase provider supports
		PREPAREs too.

2002-11-25  Ville Palo <vi64pa@koti.soon.fi>

	* System.Data/DataSet.cs : Started to implement ReadXmlSchema -method
	
2002-11-21  Tim Coleman <tim@timcoleman.com>
        * System.Data.build:
        * System.Data.SqlClient/SqlCommand.cs:
        * System.Data.SqlClient/SqlConnection.cs: